# dust-mite

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  cpp.code-workspace  docker-compose.headless.yml  docker-compose.yml  js.code-workspace  python.code-workspace
.claude/: settings.json
.devcontainer/cpp/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/docs/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/js/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/python/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: claude.yml  cpp-car.yml  docker.yml  js-web.yml  python-controller.yml
camera/: README.md  pyproject.toml  requirements.txt
camera/scripts/: create_venv.sh  update_requirements.sh  upgrade_package.sh  upgrade_requirements.sh
camera/src/camera/: __init__.py  __main__.py
car/: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  CMakeLists.txt  Dockerfile  car.ino  conftest.py  pytest.ini  requirements-test.txt  sdkconfig.defaults  sdkconfig.defaults.all
car/components/camera/: CMakeLists.txt  camera.c  camera.cpp  camera_metrics.cpp  idf_component.yml
car/components/camera/include/: camera.hpp  camera_metrics.hpp
car/components/camera/test/: CMakeLists.txt  test_camera.c  test_camera.cpp
car/components/camera/test_apps/: pytest_camera.py
car/components/camera/test_apps/main/: CMakeLists.txt  test_camera.cpp
car/components/gcov_uart_vfs/: CMakeLists.txt  gcov_uart_vfs.c  gcov_uart_vfs.h
car/components/motor/: CMakeLists.txt  motor.cpp  servo.cpp  utils.cpp
car/components/telemetry/: CMakeLists.txt  idf_component.yml  telemetry.cpp  telemetry_json.cpp  telemetry_metrics.cpp
car/components/telemetry/include/: telemetry.hpp  telemetry_metrics.hpp  telemetry_types.hpp
car/components/telemetry/test/: CMakeLists.txt  pytest_telemetry.py  test_telemetry.cpp
car/components/telemetry/test_apps/: CMakeLists.txt  pytest_telemetry_qemu.py  pytest_telemetry_qemu_coverage.py  sdkconfig.defaults  sdkconfig.defaults.coverage  sdkconfig.defaults.qemu  sdkconfig.defaults.ubsan
car/components/telemetry/test_apps/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  test_telemetry.cpp  test_telemetry_json.cpp
car/components/tracing/: CMakeLists.txt  Kconfig.projbuild  metrics.cpp  system_metrics.cpp  tracing.cpp
car/components/tracing/include/: metrics.hpp  system_metrics.hpp  tracing.hpp
car/components/tracing/test/: CMakeLists.txt  test_tracing.cpp
car/components/tracing/test_apps/: CMakeLists.txt  pytest_tracing.py  sdkconfig.defaults
car/components/tracing/test_apps/main/: CMakeLists.txt  test_tracing.cpp
car/components/web_server/: CMakeLists.txt  command_parser.cpp  web_server.c  web_server.cpp  web_server_metrics.cpp
car/components/web_server/include/: web_server.hpp  web_server_metrics.hpp
car/components/web_server/test/: CMakeLists.txt
car/components/web_server/test/main/: CMakeLists.txt  test_web_server.cpp
car/components/web_server/test_apps/: CMakeLists.txt  pytest_web_server.py  pytest_web_server_qemu.py  pytest_web_server_qemu_coverage.py  sdkconfig.defaults  sdkconfig.defaults.coverage  sdkconfig.defaults.qemu  sdkconfig.defaults.ubsan
car/components/web_server/test_apps/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  test_command_parser.cpp  test_web_server.cpp
car/components/wifi/: CMakeLists.txt  wifi.cpp
car/components/wifi/include/: wifi.hpp
car/examples/headless_camera/: CMakeLists.txt
car/main/: CMakeLists.txt  idf_component.yml  main.cpp
car/scripts/: fix_checks.sh  pre-commit.sh  run_build.sh  run_checks.sh  run_clang_format.sh  run_clang_tidy.sh  run_coverage.sh  run_coverage_report.sh  run_cpp.sh  run_cppcheck.sh  run_qemu_tests.sh  run_tests.sh
car/test/: CMakeLists.txt  sdkconfig.defaults
car/test/main/: CMakeLists.txt  (+2 more)
car/test_apps/: conftest.py
car/test_helpers/: helpers.py
controller/: .dockerignore  .gitignore  Dockerfile  README.md  controller.py  pyproject.toml  requirements.txt  setup.sh
controller/ansible/: setup_rpi.yml
controller/docs/: dual_sense.md
controller/requirements/: base.in  base.txt  dev.in  dev.txt  rpi.in  rpi.txt
controller/scripts/: create_venv.sh  find_dualsense.sh  fix_checks.sh  install_udev_rules.sh  pre-commit.sh  run_camera_stream.sh  run_checks.sh  run_formatter.sh  run_linters.sh  run_requirements_checks.sh  run_streamer.sh  run_tests.sh  run_type_checks.sh  setup_rpi.sh  verify_dualsense_connection.sh  verify_hidapi.sh
docs/: dual_sense.md  variants.md
docs/hw/: dual_sense.md  rpi.md
docs/plantuml/: copper-components.puml  iron-components.puml
docs/variants/: copper.md  iron.md
observability/: config.yml  docker-compose.yml  otelcol.yml
scripts/: apply_logo.sh  dump_env.sh  generate_plantuml_diagrams.sh  install-gh.sh  install_git_hooks.sh  load_env.sh  optimize_image.sh  pre-commit.sh  run_cpp.sh  run_js.sh  run_python.sh  start_byobu.sh  start_headless.sh  stop_headless.sh
web/: .gitignore  .oxlintrc.json  Dockerfile  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
web/scripts/: fix_checks.sh  pre-commit.sh  run_build.sh  run_checks.sh  run_dev_server.sh  run_formatter.sh  run_linters.sh  run_tests.sh
web/src/: index.js  messages.js  metrics.js
(+46 files in other folders)
